# tizenclaw-skill-plugin-sample

./: CMakeLists.txt  LICENSE  README.md  deploy.sh
docs/: GUIDE.md
docs/ko/: GUIDE.md
lib/get_sample_info/: SKILL.md  manifest.json  skill.py
lib/get_sample_load_native/: SKILL.md  main.cc  manifest.json
lib/get_sample_status/: SKILL.md  manifest.json  skill.py
lib/get_sample_time_node/: SKILL.md  manifest.json  skill.js
packaging/: tizen-manifest.xml  tizenclaw-skill-plugin-sample.spec
